@@ -10,7 +10,7 @@ chooseCRANmirror(graphics = TRUE)
 \arguments{
   \item{graphics}{Logical.
 #ifdef windows
-    If true use a list box,
+    If true use a Windows list box,
 #endif
 #ifdef unix
     If true and \pkg{tcltk} and an X server are available, use a Tk
@@ -19,7 +19,10 @@ chooseCRANmirror(graphics = TRUE)
     otherwise use \code{\link{menu}}.}
 }
 \details{
-  The list of mirrors is stored in file \file{R\_HOME/doc/CRAN\_mirrors.csv}.
+  A list of mirrors is stored in file
+  \file{R\_HOME/doc/CRAN\_mirrors.csv}, but first an on-line list of
+  current mirrors is consulted, and the file copy used only if the
+  on-line list is inaccessible.
 
   This function was originally written to support a Windows GUI menu
   item, but is also called by \code{\link{contrib.url}} if it finds the
